--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.4.623"
 edition = "2021"
 authors = ["Dallas"]
 description = "A high-level statically typed interprited general-purpose language."
+
+[features]
+daily = []
+default = []
